# mle-data-pipeline-project

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
data/processed/: daily_revenue.csv  daily_revenue.parquet  pipeline_metadata.json
solution/: README.md  requirements.txt
solution/scripts/: download_data.py  run_pipeline.py  run_prefect_flow.py
solution/src/data_pipeline/: __init__.py  cli.py  config.py  download.py  prefect_flow.py  transform.py
solution/tests/: conftest.py  test_transform.py
src/data_pipeline/: cli.py  config.py  donwload.py  prefect_flow.py  transform.py
tests/: test_transform.py
