#[build-system]
#requires = ["setuptools"]
#build-backend = "setuptools.build_meta"

#[project]
#name = "data-pipeline"
#version = "0.1.0"
#dependencies = []

#[tool.setuptools]
#package-dir = {"" = "src"}

#[tool.setuptools.packages.find]
#where = ["src"]




[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "data-pipeline"
version = "0.1.0"
dependencies = ["click", "pandas", "pyarrow", "requests"]

[project.scripts]
data-pipeline = "data_pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]